refactoring validateSingleCasesState method to remove cognitive complexity violation